Connected New File and Save File functionality to new GUI + some quality of life features

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".NewFileActivity"
+            android:name=".FilesController"
             android:screenOrientation="landscape"
         >
         </activity>
