--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,17 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.codeeditor">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CodeEditor">
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="landscape"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,20 +24,19 @@
         </activity>
         <activity
             android:name=".NewFileActivity"
-            android:screenOrientation="landscape"
-        >
-        </activity>
+            android:screenOrientation="landscape" />
         <activity
             android:name=".OpenFileActivity"
-            android:screenOrientation="landscape"
-        >
-        </activity>
+            android:screenOrientation="landscape" />
         <activity
             android:name=".FileEditorActivity"
-            android:screenOrientation="landscape"
-        >
-        </activity>        
-
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".FileExplorerActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".InternalStorageActivity"
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
